--- a/frontend/src/pages/home.css
+++ b/frontend/src/pages/home.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap');
 
-
 .container {
   display: flex;
   flex-direction: row;
@@ -18,28 +17,29 @@
 .background-text {
   position: absolute;
   transform: translate(-50%, -50%);
-  font-family: "Open Sans",sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 30rem;
   color: rgba(255, 255, 255, 0.1);
   z-index: 1;
   pointer-events: none;
 }
 
-.top{
+.top {
   top: 18%;
   left: 40%;
 }
 
-.bot{
+.bot {
   top: 95%;
   left: 20%;
   text-align: end;
-  box-sizing:content-box
+  box-sizing: content-box;
 }
 
 .content {
   width: 80vw;
   position: relative;
+  margin: auto;
   z-index: 2;
 }
 
@@ -52,15 +52,15 @@
 
 .header h1 {
   font-size: 4rem;
-  margin: 0.5rem 0;
-  padding-left: 3rem;
+  margin: 0.2rem 0;
+  padding-left: 1rem;
   text-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 .description-container {
-  width: 65%; /* Ajuste conforme necessário para a largura desejada */
-  text-align: justify; /* Justifica o texto */
-  line-height: 1.5; /* Ajusta o espaçamento entre linhas para melhor legibilidade */
+  width: 65%;
+  text-align: justify;
+  line-height: 1.5;
 }
 
 h3 {
@@ -122,6 +122,8 @@ p {
   border-radius: 1.5rem;
   padding: 1rem 2rem;
   border: 0.2rem solid #ffffff;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
   background-clip: text;
   color: transparent;
   background-image: linear-gradient(to bottom right, #C5EBF0 50%, white 50%);
@@ -133,23 +135,138 @@ p {
   animation: glow 3s infinite;
 }
 
-.inputs select, input {
+.inputs select,
+input {
   cursor: pointer;
 }
 
 .background-image {
-  max-width: 35vw;
+  max-width: 38vw;
   height: auto;
-  border-radius: 1.5rem;
   display: flex;
-  position: fixed;
-  right: 1.6rem;
+  position: absolute;
+  right: 0;
   bottom: 0;
   z-index: 2;
+  transform: scaleX(-1);
 }
 
 .custom-link {
   color: inherit;
   text-decoration: underline;
   text-decoration-color: white;
+}
+
+
+@media (max-width: 768px) {
+  .container {
+    height: auto;
+  }
+
+  .icon {
+    width: 40px;
+    height: auto;
+    margin-right: 0.5rem;
+  }
+
+  .background-text {
+    font-size: 15rem;
+    top: 10%;
+    left: 50%;
+  }
+
+  .content {
+    width: 90vw;
+  }
+
+  .header {
+    flex-direction: column;
+    text-align: center;
+    margin-left: 0;
+  }
+
+  .header h1 {
+    font-size: 2.5rem;
+    padding-left: 0;
+  }
+
+  .description-container {
+    width: 100%;
+  }
+
+  h3 {
+    font-size: 1.4rem;
+    margin-top: 2rem;
+  }
+
+  p {
+    font-size: 1rem;
+    margin: 1.5rem 0;
+  }
+
+  .inputs {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .inputs input,
+  .inputs select {
+    max-width: 100%;
+  }
+
+  .btn {
+    font-size: 1.5rem;
+  }
+
+  .background-image {
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 480px) {
+  .background-text {
+    font-size: 30rem;
+    top: 20%;
+    left: 50%;
+  }
+
+  .header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: left;
+    margin-left: 1rem;
+  }
+
+  .icon {
+    width: 40px;
+    height: auto;
+    margin-right: 0.5rem;
+  }
+
+  .header h1 {
+    font-size: 2rem;
+  }
+
+  .description-container {
+    width: 100%;
+  }
+
+  h3 {
+    font-size: 1.2rem;
+    margin-top: 1rem;
+  }
+
+  p {
+    font-size: 0.9rem;
+    margin: 1rem 0;
+  }
+
+  .btn {
+    font-size: 1.2rem;
+  }
+
+  .background-image {
+    visibility: hidden;
+  }
 }
