fix: resolving bug in border of inputs

--- a/frontend/src/pages/home.css
+++ b/frontend/src/pages/home.css
@@ -93,6 +93,12 @@ p {
   max-width: fit-content;
 }
 
+.inputs input:focus,
+.inputs select:focus {
+  border-color: #fff; 
+  outline: none; 
+}
+
 .inputs input::placeholder {
   color: #fff;
 }
