--- a/frontend/src/pages/playlist/playlist.module.css
+++ b/frontend/src/pages/playlist/playlist.module.css
@@ -64,8 +64,8 @@
 
 .image {
   border-radius: 10px;
-  width: 768px;
-  height: 768px;
+  width: 740px;
+  height: 740px;
   margin: 10px auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   outline: 2px solid rgba(217, 217, 217, 0.5);
@@ -88,8 +88,9 @@
 .playlist {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center; 
+  transition: transform 0.3s ease; 
 }
 
 .icon{
@@ -101,6 +102,21 @@
   margin: 10px 15px ;
   font-size: 20px;
   text-align: center;
+}
+
+.loading{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.playlistComponent{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 40px;
 }
 
 @keyframes glow {
