--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,5 +7,5 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: linear-gradient(to left, #417B94 0%, #4AA3C7 100%);  color: #ffffff; 
+  background-image: url(./assets/background.svg);
 }
