--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap');
 
 .container {
+  color: #ffffff;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -104,7 +105,7 @@ p {
 }
 
 .inputs select option {
-  background: #417B94;
+  background: #B0482B;
   color: #fff;
 }
 
