--- a/frontend/src/pages/playlist/playlist.module.css
+++ b/frontend/src/pages/playlist/playlist.module.css
@@ -1,4 +1,5 @@
 .container {
+  color: #ffffff;
   display: flex;
   margin: 20px;
   
@@ -73,6 +74,20 @@
   margin-right: 10px;
 
 }
+
+.btnItems {
+  width: 50px;
+  height: 50px;
+  border: none; 
+  color: white;
+  margin-left: 30px;
+  cursor: pointer; 
+}
+
+  .btnItems:hover {
+    transform: scale(1.2); 
+  }
+
 
 .footer {
   display: flex;
