--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,4 +8,8 @@ body {
   padding: 0;
   box-sizing: border-box;
   background-image: url(./assets/background.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed; 
+  background-position: center; 
 }
